# FlexCLI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.ua.md  RELEASE.md  install-termux.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
FlexCLI/: .env.example  CHANGELOG.md  requirements.txt  run.sh  update-termux.sh
FlexCLI/.github/: PULL_REQUEST_TEMPLATE.md
FlexCLI/.github/ISSUE_TEMPLATE/: feature_request.md
FlexCLI/.github/workflows/: python-ci.yml
FlexCLI/flexcli/: __init__.py  cli.py  skills.py
flexcli/: __init__.py  agent.py  cli.py  client.py  config.py  memory.py  skills.py
