[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexcli"
version = "1.0.0a3"
description = "FlexCLI: CLI chat agent for Android/Termux using NVIDIA NIM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
flexcli = "flexcli.cli:main"
